mygrammars-v4/golang/Python3/gen/GoParser.py
# Generated from GoParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

if "." in __name__:
    from .GoParserBase import GoParserBase
else:
    from GoParserBase import GoParserBase


class GoParser ( GoParserBase ):

    grammarFileName = "GoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'case'", "'chan'", "'const'", 
                     "'continue'", "'default'", "'defer'", "'else'", "'fallthrough'", 
                     "'for'", "'func'", "'go'", "'goto'", "'if'", "'import'", 
                     "'interface'", "'map'", "'nil'", "'package'", "'range'", 
                     "'return'", "'select'", "'struct'", "'switch'", "'type'", 
                     "'var'", "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'='", "','", "';'", "':'", "'.'", "'++'", "'--'", 
                     "':='", "'...'", "'||'", "'&&'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'|'", "'/'", "'%'", "'<<'", 
                     "'>>'", "'&^'", "'~'", "'!'", "'+'", "'-'", "'^'", 
                     "'*'", "'&'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CASE", "CHAN", "CONST", "CONTINUE", 
                      "DEFAULT", "DEFER", "ELSE", "FALLTHROUGH", "FOR", 
                      "FUNC", "GO", "GOTO", "IF", "IMPORT", "INTERFACE", 
                      "MAP", "NIL_LIT", "PACKAGE", "RANGE", "RETURN", "SELECT", 
                      "STRUCT", "SWITCH", "TYPE", "VAR", "IDENTIFIER", "L_PAREN", 
                      "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", 
                      "ASSIGN", "COMMA", "SEMI", "COLON", "DOT", "PLUS_PLUS", 
                      "MINUS_MINUS", "DECLARE_ASSIGN", "ELLIPSIS", "LOGICAL_OR", 
                      "LOGICAL_AND", "EQUALS", "NOT_EQUALS", "LESS", "LESS_OR_EQUALS", 
                      "GREATER", "GREATER_OR_EQUALS", "OR", "DIV", "MOD", 
                      "LSHIFT", "RSHIFT", "BIT_CLEAR", "UNDERLYING", "EXCLAMATION", 
                      "PLUS", "MINUS", "CARET", "STAR", "AMPERSAND", "RECEIVE", 
                      "DECIMAL_LIT", "BINARY_LIT", "OCTAL_LIT", "HEX_LIT", 
                      "FLOAT_LIT", "DECIMAL_FLOAT_LIT", "HEX_FLOAT_LIT", 
                      "IMAGINARY_LIT", "RUNE_LIT", "BYTE_VALUE", "OCTAL_BYTE_VALUE", 
                      "HEX_BYTE_VALUE", "LITTLE_U_VALUE", "BIG_U_VALUE", 
                      "RAW_STRING_LIT", "INTERPRETED_STRING_LIT", "WS", 
                      "COMMENT", "TERMINATOR", "LINE_COMMENT", "WS_NLSEMI", 
                      "COMMENT_NLSEMI", "LINE_COMMENT_NLSEMI", "EOS", "OTHER" ]

    RULE_sourceFile = 0
    RULE_packageClause = 1
    RULE_packageName = 2
    RULE_identifier = 3
    RULE_importDecl = 4
    RULE_importSpec = 5
    RULE_importPath = 6
    RULE_declaration = 7
    RULE_constDecl = 8
    RULE_constSpec = 9
    RULE_identifierList = 10
    RULE_expressionList = 11
    RULE_typeDecl = 12
    RULE_typeSpec = 13
    RULE_aliasDecl = 14
    RULE_typeDef = 15
    RULE_typeParameters = 16
    RULE_typeParameterDecl = 17
    RULE_typeElement = 18
    RULE_typeTerm = 19
    RULE_functionDecl = 20
    RULE_methodDecl = 21
    RULE_receiver = 22
    RULE_varDecl = 23
    RULE_varSpec = 24
    RULE_block = 25
    RULE_statementList = 26
    RULE_statement = 27
    RULE_simpleStmt = 28
    RULE_expressionStmt = 29
    RULE_sendStmt = 30
    RULE_incDecStmt = 31
    RULE_assignment = 32
    RULE_assign_op = 33
    RULE_shortVarDecl = 34
    RULE_labeledStmt = 35
    RULE_returnStmt = 36
    RULE_breakStmt = 37
    RULE_continueStmt = 38
    RULE_gotoStmt = 39
    RULE_fallthroughStmt = 40
    RULE_deferStmt = 41
    RULE_ifStmt = 42
    RULE_switchStmt = 43
    RULE_exprSwitchStmt = 44
    RULE_exprCaseClause = 45
    RULE_exprSwitchCase = 46
    RULE_typeSwitchStmt = 47
    RULE_typeSwitchGuard = 48
    RULE_typeCaseClause = 49
    RULE_typeSwitchCase = 50
    RULE_typeList = 51
    RULE_selectStmt = 52
    RULE_commClause = 53
    RULE_commCase = 54
    RULE_recvStmt = 55
    RULE_forStmt = 56
    RULE_condition = 57
    RULE_forClause = 58
    RULE_rangeClause = 59
    RULE_goStmt = 60
    RULE_type_ = 61
    RULE_typeArgs = 62
    RULE_typeName = 63
    RULE_typeLit = 64
    RULE_arrayType = 65
    RULE_arrayLength = 66
    RULE_elementType = 67
    RULE_pointerType = 68
    RULE_interfaceType = 69
    RULE_sliceType = 70
    RULE_mapType = 71
    RULE_channelType = 72
    RULE_methodSpec = 73
    RULE_functionType = 74
    RULE_signature = 75
    RULE_result = 76
    RULE_parameters = 77
    RULE_parameterDecl = 78
    RULE_expression = 79
    RULE_primaryExpr = 80
    RULE_conversion = 81
    RULE_operand = 82
    RULE_literal = 83
    RULE_basicLit = 84
    RULE_integer = 85
    RULE_operandName = 86
    RULE_qualifiedIdent = 87
    RULE_compositeLit = 88
    RULE_literalType = 89
    RULE_literalValue = 90
    RULE_elementList = 91
    RULE_keyedElement = 92
    RULE_key = 93
    RULE_element = 94
    RULE_structType = 95
    RULE_fieldDecl = 96
    RULE_string_ = 97
    RULE_embeddedField = 98
    RULE_functionLit = 99
    RULE_index = 100
    RULE_slice_ = 101
    RULE_typeAssertion = 102
    RULE_arguments = 103
    RULE_methodExpr = 104
    RULE_eos = 105

    ruleNames =  [ "sourceFile", "packageClause", "packageName", "identifier", 
                   "importDecl", "importSpec", "importPath", "declaration", 
                   "constDecl", "constSpec", "identifierList", "expressionList", 
                   "typeDecl", "typeSpec", "aliasDecl", "typeDef", "typeParameters", 
                   "typeParameterDecl", "typeElement", "typeTerm", "functionDecl", 
                   "methodDecl", "receiver", "varDecl", "varSpec", "block", 
                   "statementList", "statement", "simpleStmt", "expressionStmt", 
                   "sendStmt", "incDecStmt", "assignment", "assign_op", 
                   "shortVarDecl", "labeledStmt", "returnStmt", "breakStmt", 
                   "continueStmt", "gotoStmt", "fallthroughStmt", "deferStmt", 
                   "ifStmt", "switchStmt", "exprSwitchStmt", "exprCaseClause", 
                   "exprSwitchCase", "typeSwitchStmt", "typeSwitchGuard", 
                   "typeCaseClause", "typeSwitchCase", "typeList", "selectStmt", 
                   "commClause", "commCase", "recvStmt", "forStmt", "condition", 
                   "forClause", "rangeClause", "goStmt", "type_", "typeArgs", 
                   "typeName", "typeLit", "arrayType", "arrayLength", "elementType", 
                   "pointerType", "interfaceType", "sliceType", "mapType", 
                   "channelType", "methodSpec", "functionType", "signature", 
                   "result", "parameters", "parameterDecl", "expression", 
                   "primaryExpr", "conversion", "operand", "literal", "basicLit", 
                   "integer", "operandName", "qualifiedIdent", "compositeLit", 
                   "literalType", "literalValue", "elementList", "keyedElement", 
                   "key", "element", "structType", "fieldDecl", "string_", 
                   "embeddedField", "functionLit", "index", "slice_", "typeAssertion", 
                   "arguments", "methodExpr", "eos" ]

    EOF = Token.EOF
    BREAK=1
    CASE=2
    CHAN=3
    CONST=4
    CONTINUE=5
    DEFAULT=6
    DEFER=7
    ELSE=8
    FALLTHROUGH=9
    FOR=10
    FUNC=11
    GO=12
    GOTO=13
    IF=14
    IMPORT=15
    INTERFACE=16
    MAP=17
    NIL_LIT=18
    PACKAGE=19
    RANGE=20
    RETURN=21
    SELECT=22
    STRUCT=23
    SWITCH=24
    TYPE=25
    VAR=26
    IDENTIFIER=27
    L_PAREN=28
    R_PAREN=29
    L_CURLY=30
    R_CURLY=31
    L_BRACKET=32
    R_BRACKET=33
    ASSIGN=34
    COMMA=35
    SEMI=36
    COLON=37
    DOT=38
    PLUS_PLUS=39
    MINUS_MINUS=40
    DECLARE_ASSIGN=41
    ELLIPSIS=42
    LOGICAL_OR=43
    LOGICAL_AND=44
    EQUALS=45
    NOT_EQUALS=46
    LESS=47
    LESS_OR_EQUALS=48
    GREATER=49
    GREATER_OR_EQUALS=50
    OR=51
    DIV=52
    MOD=53
    LSHIFT=54
    RSHIFT=55
    BIT_CLEAR=56
    UNDERLYING=57
    EXCLAMATION=58
    PLUS=59
    MINUS=60
    CARET=61
    STAR=62
    AMPERSAND=63
    RECEIVE=64
    DECIMAL_LIT=65
    BINARY_LIT=66
    OCTAL_LIT=67
    HEX_LIT=68
    FLOAT_LIT=69
    DECIMAL_FLOAT_LIT=70
    HEX_FLOAT_LIT=71
    IMAGINARY_LIT=72
    RUNE_LIT=73
    BYTE_VALUE=74
    OCTAL_BYTE_VALUE=75
    HEX_BYTE_VALUE=76
    LITTLE_U_VALUE=77
    BIG_U_VALUE=78
    RAW_STRING_LIT=79
    INTERPRETED_STRING_LIT=80
    WS=81
    COMMENT=82
    TERMINATOR=83
    LINE_COMMENT=84
    WS_NLSEMI=85
    COMMENT_NLSEMI=86
    LINE_COMMENT_NLSEMI=87
    EOS=88
    OTHER=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def packageClause(self):
            return self.getTypedRuleContext(GoParser.PackageClauseContext,0)


        def eos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.EosContext)
            else:
                return self.getTypedRuleContext(GoParser.EosContext,i)


        def EOF(self):
            return self.getToken(GoParser.EOF, 0)

        def importDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.ImportDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.ImportDeclContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.FunctionDeclContext,i)


        def methodDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.MethodDeclContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(GoParser.DeclarationContext,i)


        def getRuleIndex(self):
            return GoParser.RULE_sourceFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourceFile" ):
                listener.enterSourceFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourceFile" ):
                listener.exitSourceFile(self)




    def sourceFile(self):

        localctx = GoParser.SourceFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 212
            self.packageClause()
            self.state = 213
            self.eos()
            self.state = 219
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 214
                self.importDecl()
                self.state = 215
                self.eos()
                self.state = 221
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 231
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 100665360) != 0):
                self.state = 225
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 222
                    self.functionDecl()
                    pass

                elif la_ == 2:
                    self.state = 223
                    self.methodDecl()
                    pass

                elif la_ == 3:
                    self.state = 224
                    self.declaration()
                    pass


                self.state = 227
                self.eos()
                self.state = 233
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 234
            self.match(GoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(GoParser.PACKAGE, 0)

        def packageName(self):
            return self.getTypedRuleContext(GoParser.PackageNameContext,0)


        def getRuleIndex(self):
            return GoParser.RULE_packageClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageClause" ):
                listener.enterPackageClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageClause" ):
                listener.exitPackageClause(self)




    def packageClause(self):

        localctx = GoParser.PackageClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 236
            self.match(GoParser.PACKAGE)
            self.state = 237
            self.packageName()
            self.myreset();
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(GoParser.IdentifierContext,0)


        def getRuleIndex(self):
            return GoParser.RULE_packageName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageName" ):
                listener.enterPackageName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageName" ):
                listener.exitPackageName(self)




    def packageName(self):

        localctx = GoParser.PackageNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_packageName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 240
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GoParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GoParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = GoParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 242
            self.match(GoParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(GoParser.IMPORT, 0)

        def importSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.ImportSpecContext)
            else:
                return self.getTypedRuleContext(GoParser.ImportSpecContext,i)


        def L_PAREN(self):
            return self.getToken(GoParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(GoParser.R_PAREN, 0)

        def eos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.EosContext)
            else:
                return self.getTypedRuleContext(GoParser.EosContext,i)


        def getRuleIndex(self):
            return GoParser.RULE_importDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDecl" ):
                listener.enterImportDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDecl" ):
                listener.exitImportDecl(self)




    def importDecl(self):

        localctx = GoParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 244
            self.match(GoParser.IMPORT)
            self.state = 256
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27, 38, 79, 80]:
                self.state = 245
                self.importSpec()
                pass
            elif token in [28]:
                self.state = 246
                self.match(GoParser.L_PAREN)
                self.state = 252
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 27)) & ~0x3f) == 0 and ((1 << (_la - 27)) & 13510798882113537) != 0):
                    self.state = 247
                    self.importSpec()
                    self.state = 248
                    self.eos()
                    self.state = 254
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 255
                self.match(GoParser.R_PAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importPath(self):
            return self.getTypedRuleContext(GoParser.ImportPathContext,0)


        def DOT(self):
            return self.getToken(GoParser.DOT, 0)

        def packageName(self):
            return self.getTypedRuleContext(GoParser.PackageNameContext,0)


        def getRuleIndex(self):
            return GoParser.RULE_importSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportSpec" ):
                listener.enterImportSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportSpec" ):
                listener.exitImportSpec(self)




    def importSpec(self):

        localctx = GoParser.ImportSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_importSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 260
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.state = 258
                self.match(GoParser.DOT)
                pass
            elif token in [27]:
                self.state = 259
                self.packageName()
                pass
            elif token in [79, 80]:
                pass
            else:
                pass
            self.state = 262
            self.importPath()
            self.addImportSpec();
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_(self):
            return self.getTypedRuleContext(GoParser.String_Context,0)


        def getRuleIndex(self):
            return GoParser.RULE_importPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportPath" ):
                listener.enterImportPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportPath" ):
                listener.exitImportPath(self)




    def importPath(self):
